--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   provider: ^5.0.0
   get: ^3.26.0
   carousel_slider: ^3.0.0
+  http: ^0.13.1
 
 
   # The following adds the Cupertino Icons font to your application.
