--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   provider: ^5.0.0
   get: ^3.26.0
   carousel_slider: ^3.0.0
-  http: ^0.13.1
+  # http: ^0.13.1
+  dio: ^3.0.10
+  shared_preferences: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
